@@ -268,6 +268,7 @@ namespace libtorrent
 			, read_job_every(10)
 			, use_disk_read_ahead(true)
 			, lock_files(false)
+			, ssl_listen(true)
 		{}
 
 		// libtorrent version. Used for forward binary compatibility
@@ -1075,6 +1076,9 @@ namespace libtorrent
 		// if set to true, files will be locked when opened.
 		// preventing any other process from modifying them
 		bool lock_files;
+
+		// open an ssl listen socket for ssl torrents
+		bool ssl_listen;
 	};
 
 #ifndef TORRENT_DISABLE_DHT
